--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,36 @@
-* {
-  box-sizing: border-box;
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
 }
 
 html {
-  font-family: sans-serif;
+  box-sizing: border-box;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 62.5%; /*1rem == 10px*/
 }
 
 body {
-  margin: 0;
+  font-size: 1.6rem;
+  background: linear-gradient(
+    135deg,
+    rgba(68, 90, 223, 1) 0%,
+    rgba(76, 226, 147, 1) 100%
+  );
+}
+
+ul li {
+  list-style: none;
+  text-decoration: none;
+}
+
+.container {
+  min-height: 100vh;
+  padding: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
